nbsap/static/css/style.css
/* ... */
.homepage_view div.full {
  display: none;
}

.indicator_homepage table {
  margin-top: 10px;
}

.indicator_homepage h2 {
  border-bottom: 0;
}

.login-container {
    margin-top: 8px;
}

.login-container label {
    margin-bottom: 6px;
}

.login-container input {
    width: 350px;
}
.login-container button {
    margin-bottom: 8px;
}

.login-container div.signin-button {
    margin-top: 10px;
}

.login-alternative span {
        font-style: italic;
}

.login-alternative a {
        font-style: italic;
        text-decoration: none;
}

.wmd-panel .btn-toolbar {
        margin-bottom: 10px!important;
}

.add {
    margin-bottom: 15px;
}

.modal-backdrop {
    opacity: 0.2;
}

#help {
  top: 30%;
  left: 45%;
  width: auto;
}

#help p {
  margin: 0 0 5px 0;
  color: #888;
}

.hidden {
    display: none;
}

/* overwrite from bootstrap */
.tooltip {
    font-size: 11px;
}

.tooltip.in {
	opacity: 0.95;
	filter: alpha(opacity=95);
}

.tooltip-inner {
    max-width: 800px;
    background-color: white;
    color: #000;
	border: 1px solid #888;
	-webkit-border-radius: 6px;
	-moz-border-radius: 6px;
	border-radius: 6px;
	-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
	-moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
}

.tooltip p {
	margin-bottom: 0px;
}


/* SONIA's styles */

/* header */
body {
    padding: 0px;
	background: #4D8584 url('../bg.png') repeat-x;
}

.navbar-inner {
	width: 1170px;
	margin: 0 auto;
	background: white;
	padding: 0;
	border: 0px;
	border-radius: 0px;
	-moz-border-radius: 0px;
	-webkit-border-radius: 0px;
}

.navbar {
	margin-bottom: 0;
}

.navbar-inner .container {
	background: url('../024.jpg') no-repeat 100% -73%;
	height: 99px;
}

.navbar .brand {
	width: 31%;
	height: 50px;
    margin-top: 5px;
	margin-left: 0;
	padding-left: 67px;
	padding-top: 36px;
	color: #014E46;
	background: url('../CHM_logo_45x70px.png') no-repeat 3% 72%;
}

@media (min-width: 1200px) {
    .navbar-inner,
	footer {
		width: 1170px;
		padding-left: 5px;
		padding-right: 10px;
    }

}

@media (max-width: 1024px) {
	.navbar-inner,
	.container.content,
	footer {
		width: 940px;
		padding-left: 5px;
		padding-right: 10px;
    }

	.navbar-inner .container {
		background: url('../024.jpg') no-repeat 166% -73%;
		width: 940px;
	}

	.navbar .brand {
		width: 35%;
	}
}

.navbar .nav.top-menu {
    margin-top: -7px;
	font-size: 11px;
}

.navbar .nav > li > a {
    text-shadow: none;
}

.navbar .nav > li > a:hover {
    color: #444;
}

.navbar .nav li.dropdown .dropdown-toggle .caret,
.navbar .nav li.dropdown.open .caret {
    border-top-color: #000;
}

.nav-tabs > .active > a,
.nav-tabs > .active > a:hover {
	border: 1px solid #014E46;
	border-bottom-color: transparent;
}

.nav-tabs {
	border-bottom: 1px solid #014E46;
}

.nav-tabs > li > a {
	color: #014E46;
}

.navbar .nav > li.language-menu > a {
	padding: 10px 5px 0px;
	color: #014E46;
	text-transform: uppercase;
}

div.element_field.no-padding-top {
	padding-top: 0;
}


/* footer */
footer {
    border-top: 0px;
	margin: 0 auto;
	background: white;
}

footer ul {
    width: 190px;
}

footer ul li {
    display: inline-block;
    margin-left: 3px;
}

footer .pull-left {
    margin-top: 20px;
	font-size: 10px;
	margin-left: 128px;
}

footer .pull-left a {
	color: #014E46;
}

footer p {
    margin-right: 10px;
}

.museum-logo {
    background: url('../logo_irscnb.png') no-repeat 85% 50%;
    height: 70px;
    width: 94px;
    text-indent: -9999px;
}

.CHM-logo {
    background: url('../CHM_logo_45x70px.png') no-repeat;
    height: 70px;
    width: 45px;
    text-indent: -9999px;
	margin-left: 15px;
}

.container.content {
    padding-top: 25px;
	background: #fff;
	padding-left: 5px;
	padding-right: 10px;
}

footer .nav > li > a:hover {
	background-color: transparent;
}


/* AICHI page */
.nav-tabs.nav-stacked > li.active > a,
.nav-tabs.nav-stacked > li > a:hover {
    background: #08C;
    color: #fff;
}

.nav .nav-header {
    padding: 3px 15px 3px 5px;
    margin-bottom: 0px;
}

.nav li + .nav-header:last-of-type {
    margin-top: 40px;
}

.tabs-left > .nav-tabs {
    border-right: 0px;
}

.homepage_view label {
    color: #777;
}

.homepage_view ul {
    list-style-type: circle;
}

.well ul {
    list-style-type: square;
}

.tabs-left > .nav-tabs {
    margin-right: 25px;
}

.nav.nav-tabs.nav-stacked {
    padding: 19px 0px 0px;
    margin-bottom: 20px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
    border-right: 1px solid #DDD;
}

.nav-tabs.nav-stacked > li > a {
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    border: 0px;
    border-bottom: 1px solid #ddd;
}

.local-navigation.nav-tabs > li > a {
    border-top: 1px solid #ddd;
}

.local-navigation.nav-tabs > .active > a,
.local-navigation.nav-tabs > .active > a:hover {
    border: 0px;
    border-top: 1px solid #ddd;
}

.tabs-left > .nav-tabs > li > a,
.tabs-right > .nav-tabs > li > a {
    margin-bottom: 0px; /* overrides bootstrap.css 3519 */
}

.homepage_view h1,
.homepage_view h2 {
    border-bottom: 0px;
}

.target-description {
    font-weight: bold;
}

h1 p,
h2 p {
    display: inline;
}


/* Indicators page */
.indicator_field {
    color: #777;
}

.indicator_table,
.indicator_table th,
.indicator_table td {
    border: 0px; /* overrides bootstrap.css 1561, 1572 */
}

.indicator_table ul,
.indicator_view ul {
	list-style-type: square;
}


/* Objectives page */
.full {
    padding: 5px;
    margin-top: 5px;
}

.element_field.well.objective-description {
    padding: 10px 19px;
}

.more,
.less {
    padding: 2px 4px;
    background-color: #F7F7F9;
    border: 1px solid #ccc;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
}

.well .mapping-list {
    list-style-type: none;
    margin-left: 0px;
}
/* ... */

